--- a/ecommerc/requirements.txt
+++ b/ecommerc/requirements.txt
@@ -1,16 +1,23 @@
-Django==3.2.7
-mysqlclient==2.0.3
-django-environ==0.8.1
-django-debug-toolbar==3.2
-django-allauth==0.45.0
-Celery==5.1.2
-Redis==4.0.2
-djangorestframework==3.12.4
-markdown==3.3.4
-django-filter==2.4.0
-django-storages==1.12.2
-boto3==1.17.49
-pytest==6.2.4
-pytest-django==4.4.0
-flake8==3.9.2
-black==21.9b0
+asgiref==3.8.1
+certifi==2024.2.2
+charset-normalizer==3.3.2
+Django==4.1.13
+django-mongodb-engine==0.6.0
+djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
+djangotoolbox==1.8.0
+djongo==1.3.6
+dnspython==2.6.1
+idna==3.7
+mysqlclient==2.2.4
+pillow==10.3.0
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+PyJWT==2.8.0
+pymongo==4.6.3
+requests==2.31.0
+sqlparse==0.2.4
+stripe==9.3.0
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
